feat: add missing CRUDs in obs plane services
