# internal/openchoreo-api/api/gen/models.gen.go
@@ -3680,6 +3680,12 @@ type CreateClusterDataPlaneJSONRequestBody = ClusterDataPlane
 // UpdateClusterDataPlaneJSONRequestBody defines body for UpdateClusterDataPlane for application/json ContentType.
 type UpdateClusterDataPlaneJSONRequestBody = ClusterDataPlane
 
+// CreateClusterObservabilityPlaneJSONRequestBody defines body for CreateClusterObservabilityPlane for application/json ContentType.
+type CreateClusterObservabilityPlaneJSONRequestBody = ClusterObservabilityPlane
+
+// UpdateClusterObservabilityPlaneJSONRequestBody defines body for UpdateClusterObservabilityPlane for application/json ContentType.
+type UpdateClusterObservabilityPlaneJSONRequestBody = ClusterObservabilityPlane
+
 // CreateClusterRoleBindingJSONRequestBody defines body for CreateClusterRoleBinding for application/json ContentType.
 type CreateClusterRoleBindingJSONRequestBody = AuthzClusterRoleBinding
 
@@ -3745,6 +3751,12 @@ type CreateObservabilityAlertsNotificationChannelJSONRequestBody = Observability
 
 // UpdateObservabilityAlertsNotificationChannelJSONRequestBody defines body for UpdateObservabilityAlertsNotificationChannel for application/json ContentType.
 type UpdateObservabilityAlertsNotificationChannelJSONRequestBody = ObservabilityAlertsNotificationChannel
+
+// CreateObservabilityPlaneJSONRequestBody defines body for CreateObservabilityPlane for application/json ContentType.
+type CreateObservabilityPlaneJSONRequestBody = ObservabilityPlane
+
+// UpdateObservabilityPlaneJSONRequestBody defines body for UpdateObservabilityPlane for application/json ContentType.
+type UpdateObservabilityPlaneJSONRequestBody = ObservabilityPlane
 
 // CreateProjectJSONRequestBody defines body for CreateProject for application/json ContentType.
 type CreateProjectJSONRequestBody = Project
